--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ ol {
   margin-bottom: 48px;
 }
 
-button {
+.hero-btn {
   cursor: pointer;
   border-radius: 4px;
   min-width: 169px;
@@ -171,9 +171,6 @@ button {
   margin-top: 43px;
   box-shadow: 0 2px 4px #2e2f42;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hero-btn {
 }
 
 .hero-btn:hover,
@@ -547,11 +544,13 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
 }
+
 .modal {
   position: absolute;
   top: 50%;
@@ -562,24 +561,22 @@ img {
   background-color: #fcfcfc;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 24px;
 }
+
 .modal-close-btn {
   position: absolute;
   top: 24px;
   right: 24px;
+  line-height: 0;
+  padding: 0;
+  border: none;
   width: 24px;
   height: 24px;
-  border-radius: 50%;
-  padding: 0;
-  cursor: pointer;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #e7e9fc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
 }
+
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
@@ -588,7 +585,75 @@ img {
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-close-btn:hover > .modal-close-icon,
 .modal-close-btn:focus > .modal-close-icon {
   fill: #ffffff;
+}
+
+.modal-title {
+  font: 500 16px / 150% "Roboto";
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  padding-top: 72px;
+  margin-bottom: 16px;
+}
+
+.modal-icon {
+  fill: #2e2f42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal-input {
+  width: 360px;
+  height: 16px;
+  padding-left: 38px;
+}
+
+.modal-input:focus {
+  border-color: #434455;
+}
+.modal-icon:hover > .modal-icon,
+.modal-icon:fokus > .modal-icon {
+  fill: #4d5ae5;
+}
+
+.modal-label {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-fild {
+  margin-bottom: 8px;
+}
+.modal-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.input-wrap {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  position: relative;
+}
+
+.modal-input {
+  border: 1px solid #4d5ae5;
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  outline: transparent;
+  /*padding-left: 16px;*/
+}
+
+.modal-sent-btn {
 }
