--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,26 @@ img {
 .modal-close-btn:focus > .modal-close-icon {
   fill: #ffffff;
 }
+.modal-form {
+}
+
+.modal-fild {
+  margin-bottom: 8px;
+}
+
+.modal-input {
+  width: 100%;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  height: 40px;
+  padding: 0 0 0 34px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+}
+
+.input-wrap {
+  position: relative;
+}
 
 .modal-title {
   font: 500 16px / 150% "Roboto";
@@ -601,33 +621,22 @@ img {
 }
 
 .modal-icon {
-  fill: #2e2f42;
   position: absolute;
+  fill: #2e2f42;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-}
-
-.modal-input {
-  width: 360px;
-  height: 16px;
-  padding-left: 38px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
-  border-color: #434455;
+  border-color: #4d5ae5;
 }
-.modal-icon:hover > .modal-icon,
-.modal-icon:fokus > .modal-icon {
+
+.modal-icon:fokus + .modal-input {
   fill: #4d5ae5;
 }
 
-.modal-label {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-fild {
-  margin-bottom: 8px;
-}
 .modal-label {
   font-weight: 400;
   font-size: 12px;
@@ -636,23 +645,6 @@ img {
   color: #8e8f99;
   display: block;
   margin-bottom: 4px;
-}
-
-.input-wrap {
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  width: 360px;
-  height: 40px;
-  position: relative;
-}
-
-.modal-input {
-  border: 1px solid #4d5ae5;
-  border-radius: 4px;
-  width: 100%;
-  height: 40px;
-  outline: transparent;
-  /*padding-left: 16px;*/
 }
 
 .modal-sent-btn {
