--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,67 @@ img {
 .ft-icon-icon {
   fill: #f4f4fd;
 }
+
+.footer-form {
+  margin-left: 80px;
+}
+
+.ft-form-label {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  outline: none;
+  padding: 8px 16px;
+}
+.footer-input::placeholder {
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.footer-icon-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
+
+.footer-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  background: #4d5ae5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /*------modal-----*/
 
 .backdrop {
@@ -543,6 +604,9 @@ img {
   position: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .is-open {
@@ -633,7 +697,7 @@ img {
   border-color: #4d5ae5;
 }
 
-.modal-icon:fokus + .modal-input {
+.modal-input:focus + .modal-icon {
   fill: #4d5ae5;
 }
 
@@ -647,5 +711,81 @@ img {
   margin-bottom: 4px;
 }
 
+/*-----TextArea-----*/
+
+.modal-text {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+  resize: none;
+  padding: 8px 16px;
+}
+
+/*-----check-box----*/
+
+.modal-check {
+}
+.check-input {
+}
+
+.label-checkbox {
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.checkbox {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  fill: transparent;
+}
+
+.check-input:checked + .label-checkbox > .checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #fff;
+}
+
+.check-icon {
+}
+.check-link {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  line-height: 133%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  fill: #8e8f99;
+  color: #4d5ae5;
+}
+
+/*------Button----*/
+
 .modal-sent-btn {
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  border-color: transparent;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  display: block;
+  text-align: center;
+  color: #fff;
+  margin: 0 auto;
+  margin-top: 24px;
 }
