--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,10 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-btn:hover {
+  background-color: #404bbf;
+}
+
 /*------modal-----*/
 
 .backdrop {
