--- a/css/styles.css
+++ b/css/styles.css
@@ -560,7 +560,10 @@ img {
   letter-spacing: 0.04em;
   outline: none;
   padding: 8px 16px;
+  letter-spacing: 0.04em;
+  color: #fff;
 }
+
 .footer-input::placeholder {
   font-size: 12px;
   line-height: 200%;
@@ -580,6 +583,9 @@ img {
   border-radius: 4px;
   padding: 8px 24px;
   min-width: 165px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
   height: 40px;
   background: #4d5ae5;
   letter-spacing: 0.04em;
@@ -603,6 +609,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  padding: 72px 24px 24px;
   opacity: 0;
   visibility: hidden;
   position: none;
@@ -628,12 +635,14 @@ img {
   min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 24px;
 }
 
 .modal-close-btn {
-  position: absolute;
+  cursor: pointer;
   top: 24px;
   right: 24px;
   line-height: 0;
@@ -643,6 +652,13 @@ img {
   height: 24px;
   background-color: #e7e9fc;
   border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
@@ -662,7 +678,7 @@ img {
 }
 
 .modal-fild {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-input {
@@ -671,8 +687,10 @@ img {
   border-radius: 4px;
   height: 40px;
   padding: 0 0 0 34px;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
+  padding-left: 38px;
 }
 
 .input-wrap {
@@ -722,15 +740,25 @@ img {
   border-radius: 4px;
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
   resize: none;
   padding: 8px 16px;
 }
 
+.modal-text:focus {
+  border-color: #4d5ae5;
+}
+
 /*-----check-box----*/
 
 .modal-check {
+  margin-bottom: 24px;
 }
 .check-input {
 }
@@ -750,12 +778,15 @@ img {
   justify-content: center;
   align-items: center;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-input:checked + .label-checkbox > .checkbox {
   background-color: #404bbf;
   border: none;
-  fill: #fff;
+  fill: #f4f4fd;
 }
 
 .check-icon {
@@ -789,6 +820,8 @@ img {
   letter-spacing: 0.04em;
   display: block;
   text-align: center;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #fff;
   margin: 0 auto;
   margin-top: 24px;
